# my-lost-pet-rust

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.dev  GEMINI.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  lint.yml  test.yml
assets/: main.css  map_script.js  tailwind.css
src/: main.rs
src/components/: carousel.rs  footer.rs  map.rs  mod.rs  navbar.rs  pet.rs  pet_card.rs  social_share.rs  toggle.rs
src/pages/: adoption_pets.rs  home.rs  missing_pets.rs  mod.rs
tests/: cucumber.rs
tests/features/: carousel.feature  header.feature  social_share.feature  toggle.feature
tests/steps/: carousel.rs  header.rs  mod.rs  social_share.rs  toggle.rs
