[package]
name = "my-lost-pet-rust"
version = "0.1.0"
authors = ["ijarquin <isaac.jarquin@sky.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack", "ssr"] }
dotenvy = "0.15.7"
fmt = "0.1.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
dioxus-ssr = "0.6"
cucumber = "0.21.1" # Use the latest version
async-std = { version = "1.10", features = ["attributes"] }
colored = "2"
pretty_assertions = "1.4.1"
thirtyfour = "0.31"
tokio = "1.47.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[[test]]
name = "cucumber" # Name of your test runner (matches tests/cucumber.rs)
path = "tests/cucumber.rs"
harness = false # Crucial: tells cargo not to generate its own test harness
